--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp-urlconnection:4.8.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6"
+    implementation 'com.google.code.gson:gson:2.8.5'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
